--- a/thing/thing.html
+++ b/thing/thing.html
@@ -71,23 +71,24 @@
 			<h2>Items (<label id="activeProjectNameLabel"></label>)</h2>
 			<div class="btn-toolbar mb-2 mb-md-0">
 				<div class="btn-group mr-2">
-					<button class="btn btn-sm btn-outline-secondary" id="createThingButton" title="Create a new item (F2) ">New Item</button>
+					<button class="btn btn-sm btn-outline-secondary" id="createThingButton"
+						title="Create a new item (F2) ">New Item</button>
 					<button class="btn btn-sm btn-outline-secondary" id="exportThingsButton">Export list</button>
 				</div>
 			</div>
 		</div>
 		<!-- <div class="table-responsive"> -->
-			<table id="thingsTable" class="table table-hover">
-				<thead>
-					<tr>
-						<th><a id="typeSortOrder" href="#" title="Sort order">Type</a></th>
-						<th><a id="identifierSortOrder" href="#" title="Sort order">Identifier</a></th>
-						<th><a id="descriptionSortOrder" href="#" title="Sort order">Description</a></th>
-						<th><a id="updatedSortOrder" href="#" title="Sort order">Updated</a></th>
-					</tr>
-				</thead>
-				<tbody></tbody>
-			</table>
+		<table id="thingsTable" class="table table-hover">
+			<thead>
+				<tr>
+					<th><a id="typeSortOrder" href="#" title="Sort order">Type</a></th>
+					<th><a id="identifierSortOrder" href="#" title="Sort order">Identifier</a></th>
+					<th><a id="descriptionSortOrder" href="#" title="Sort order">Description</a></th>
+					<th><a id="updatedSortOrder" href="#" title="Sort order">Updated</a></th>
+				</tr>
+			</thead>
+			<tbody></tbody>
+		</table>
 		<!-- </div> -->
 	</main>
 	<footer class="text-center text-light bg-dark" style="position: fixed; bottom: 0px; width: 100%;">
