Link Types complete

--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
 					<div class="btn-toolbar mb-2 mb-md-0">
 						<div class="btn-group mr-2">
 							<button class="btn btn-sm btn-outline-secondary" id="create-link-type"
-								title="Create a new Link Type (F2) ">New Item Type</button>
+								title="Create a new Link Type (F2) ">New Link Type</button>
 							<button class="btn btn-sm btn-outline-secondary" id="export-link-types">Export
 								list</button>
 						</div>
@@ -185,6 +185,7 @@
 				<table id="link-types-table" class="table table-hover">
 					<thead>
 						<tr>
+							<th>Visual</a></th>
 							<th><a id="link-type-identifier-sort-order" href="#" title="Sort order">Identifier</a></th>
 							<th><a id="link-type-description-sort-order" href="#" title="Sort order">Description</a>
 							</th>
