--- a/index.html
+++ b/index.html
@@ -62,6 +62,10 @@
 					<a class="nav-link" id="visualise-tab" data-toggle="tab" href="#visualise" role="tab"
 						aria-controls="visualise" aria-selected="false">Visualise</a>
 				</li>
+				<li class="nav-item">
+					<a class="nav-link" id="test-visualise-tab" data-toggle="tab" href="#test-visualise" role="tab"
+						aria-controls="test-visualise" aria-selected="false">Test Visualise</a>
+				</li>
 			</ul>
 			<!-- <form class="form-inline"> -->
 			<div class="input-group" style="width: 250px;">
@@ -229,6 +233,9 @@
 			</div>
 			<div class="tab-pane fade-in" id="visualise" role="tabpanel" aria-labelledby="visualise-tab">
 				<div id="chart" style="position: relative;"></div>
+			</div>
+			<div class="tab-pane fade-in" id="test-visualise" role="tabpanel" aria-labelledby="test-visualise-tab">
+				<div id="test-chart" style="position: relative;"></div>
 			</div>
 		</div>
 	</main>
